--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta http-equiv="refresh" content="1; url=latest/" />
   </noscript>
   <script>
-    window.location.pathname = '/latest' + window.location.pathname
+    window.location.replace(
+      "latest/" + window.location.search + window.location.hash
+    );
   </script>
 </head>
 <body>
